<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginStart="10sp"
    android:layout_marginTop="10sp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/surveyStartText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/survey_start_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/surveyAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/survey_age" />

        <EditText
            android:id="@+id/surveyAgeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/survey_age_hint"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/survey_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/survey_gender" />

        <RadioGroup
            android:id="@+id/selectGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonGenderClicked"
                android:text="@string/survey_gender_female_button" />

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:text="@string/survey_gender_male_button" />
        </RadioGroup>

        <TextView
            android:id="@+id/surveyMovieChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/survey_movie_choice" />

        <RadioGroup
            android:id="@+id/selectMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/marieAntoinetteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:onClick="onRadioButtonMovieClicked"
                android:background="@drawable/marie_antoniette_movie_poster" />

            <TextView
                android:id="@+id/textMovieMarieantoinette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/text_movie_marie_antoniette" />

            <RadioButton
                android:id="@+id/enemyAtTheGatesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:onClick="onRadioButtonMovieClicked"
                android:background="@drawable/enemy_at_the_gate_movie_poster" />

            <TextView
                android:id="@+id/textMovieEnemyAtTheGates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/survey_text_movie_enemy_at_the_gates" />

            <RadioButton
                android:id="@+id/captainAmericaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:onClick="onRadioButtonMovieClicked"
                android:background="@drawable/captain_america_movie_poster" />

            <TextView
                android:id="@+id/textMovieCaptainAmerica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/survey_text_movie_captain_america" />

            <RadioButton
                android:id="@+id/spiritedAwayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:onClick="onRadioButtonMovieClicked"
                android:background="@drawable/spirited_away_movie_poster" />

            <TextView
                android:id="@+id/texMovieSpiritedAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/survey_text_movie_spirited_away" />

        </RadioGroup>

        <TextView
            android:id="@+id/surveyArtStyleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:text="@string/survey_art_style_text" />

        <RadioGroup
            android:id="@+id/selectArtStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/normalArtButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:onClick="onRadioButtonArtStyleClicked"
                android:background="@drawable/mona_lisa_normal_art_style" />

            <RadioButton
                android:id="@+id/cubaLisaArtStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:onClick="onRadioButtonArtStyleClicked"
                android:background="@drawable/cuba_lisa_art_style" />

            <RadioButton
                android:id="@+id/legoLisaArtStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:onClick="onRadioButtonArtStyleClicked"
                android:background="@drawable/lego_lisa_art_style" />

        </RadioGroup>

        <TextView
            android:id="@+id/surveyTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:text="@string/survey_time_text" />

        <RadioGroup
            android:id="@+id/selectTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/halfHourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonTimeClicked"
                android:text="@string/survey_half_hour_time_button" />

            <RadioButton
                android:id="@+id/hourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonTimeClicked"
                android:text="@string/survey_hour_button" />

            <RadioButton
                android:id="@+id/moreHoursButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonTimeClicked"
                android:text="@string/survey_hour_button" />

        </RadioGroup>

        <Switch
            android:id="@+id/switchTour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:text="@string/survey_use_musa_services"
            tools:layout_marginRight="10sp" />

        <Switch
            android:id="@+id/switchCollecting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:text="@string/survey_data_collection_consent" />

        <Button
            android:id="@+id/submitSurveyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20sp"
            android:background="@color/primary"
            android:text="@string/survey_submit_button_text" />

    </LinearLayout>
</ScrollView>