<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tourIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tour_intro"
            android:textColor="@color/primary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewTour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/closestArtworkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/closest_artwork_button"
            android:layout_marginStart="20sp" />

        <Button
            android:id="@+id/tourEndButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/tour_end_button"
            android:layout_marginStart="20sp" />

    </LinearLayout>

</ScrollView>